# clocker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
clocker/: __init__.py
tests/: test_stopwatch.py
ticktocker/: __init__.py  stopwatch.py  ticktocker.py  utils.py
