[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ticktocker"
version = "0.5"
description = "A simple Python package for clocking"
authors = [{ name="Yeho Gwon", email="yeho.gwon@postech.ac.kr" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
